# dio-api-twitter

./: Dockerfile  README.md  pyproject.toml  requirements.txt
Scripts/: activate  activate.bat  activate.fish  activate.nu
app/: dasboard.py  main.py
src/: connection.py  responses.py  services.py
