[tool.poetry]
name = "mongo-test"
version = "0.1.0"
description = ""
authors = ["Shura <julian.domeneghini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
pymongo = "^4.4.0"
tweepy = "^4.14.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>>1.0.0"]
build-backend = "poetry.core.masonry.api"

